--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ RDS_HOSTNAME=mutant-database.c6tiaz4catpb.us-east-1.rds.amazonaws.com
 RDS_PORT=3306
 RDS_DATABASE=mutant-database
 RDS_USER_NAME=admin
-RDS_PASSWORD=Orion7089
+RDS_PASSWORD=xxxxxxxxxxxxxxxxxxxx
 RDS_REGION=us-east-1
 PORT=3010
 VERSION=1.O.1
